--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -3,36 +3,34 @@
         <div class="col-xs-6">
             <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h2>
             
-            <table class="message table">
+            <table class="table">
                 <thead>
                     <tr>
                         <th style="text-align:left;font-size:20px;"><%= current_user.name %></th>
                         <th style="text-align:right;font-size:20px;"><%= @user.name %></th>
                     </tr>
                 </thead>
+                <tbody class="message">
                 <% @chats.each do |chat| %>
-                    <% if chat.user_id == current_user.id %>
-                    <tbody>
-                        <tr>
-                            <th>
-                                <p style="text-align:left;"><%= chat.message %></p>
+                    <tr>
+                            <% if chat.user_id == current_user.id %>
+                            <th colspan="2"style="text-align:left;border:none;">
+                                <span style="background-color: greenyellow;border-radius: 4px;padding: 0% 3% 5% 3%;"><%= chat.message %></span>
                             </th>
-                            <th></th>
-                        </tr>
-                    </tbody>
-                    <% else %>
-                    <tbody>
-                        <tr>
-                            <p style="text-align: right;"><%= chat.message %></p>
-                        </tr>
-                    </tbody>
-                    <% end %>
+                            <% else %>
+                            <th colspan="2"style="text-align:right;border:none;">
+                                <span style="background-color: greenyellow;border-radius: 4px;padding: 0% 3% 5% 3%;"><%= chat.message %></span>
+                            </th>
+                            <% end %>
+                    </tr>                            
                 <% end %>
+                </tbody>
             </table>
             
             <%= form_with model: @chat, remote: true do |f| %>
                 <%= f.text_field :message %>
                 <%= f.hidden_field :room_id %>
+                <%= f.submit "送信"%>
             <% end %>
         </div>
     </div>
